# apple-notes-parser

./: CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: check_code_quality.py  regenerate_protobuf.py
src/apple_notes_parser/: __init__.py  __main__.py  cli.py  database.py  embedded_objects.py  exceptions.py  models.py  notestore_pb2.py  parser.py  protobuf_parser.py
tests/: TestNoteStore.sqlite  conftest.py  test_applescript_id.py  test_basic_functionality.py  test_cli.py  test_content_default.py  test_content_export.py  test_embedded_objects.py  test_fixed_hashtags.py  test_folder_hierarchy.py  test_folder_hierarchy_pytest.py  test_folder_only.py  test_folder_only_pytest.py  test_full_pipeline.py  test_integration.py  test_ios19_support.py  test_macos12_monterey.py  test_macos13_ventura.py  test_macos14_sonoma.py  test_macos26_support.py  test_media_extraction.py  test_real_database.py  test_tags.py  test_version_agnostic.py
tests/data/: NoteStore-macOS-12-Monterey.sqlite  NoteStore-macOS-13-Ventura.sqlite  NoteStore-macOS-14-Sonoma.sqlite  NoteStore-macOS-15-Seqoia.sqlite  NoteStore-macOS-26-Tahoe.sqlite
tests/data/GroupContainers/macOS15-Sequioa/group.com.apple.notes/: .com.apple.containermanagerd.metadata.plist  NoteStore.sqlite  NoteStore.sqlite-shm  NoteStore.sqlite-wal
tests/data/GroupContainers/macOS26-Tahoe/group.com.apple.notes/: .com.apple.containermanagerd.metadata.plist  NoteStore.sqlite  NoteStore.sqlite-shm  NoteStore.sqlite-wal
